feat: lab5 and misc

--- a/lab5/lab5.vcxproj.filters
+++ b/lab5/lab5.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="lab5main.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="lab5.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lab5.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
