--- a/lab5/lab5.vcxproj
+++ b/lab5/lab5.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="lab5.c" />
     <ClCompile Include="lab5main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lab5.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
